[project]
name = "structured-llm"
version = "0.1.0"
description = "A unified interface for structured LLM outputs with Pydantic validation, automatic retries, and multi-provider support"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Egehan Yorulmaz" }
]
keywords = ["llm", "pydantic", "structured-output", "openai", "anthropic", "gemini", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "instructor>=1.7.0",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "google-genai>=1.0.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
    "jsonref>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/egehanyorulmaz/structured-llm"
Repository = "https://github.com/egehanyorulmaz/structured-llm"
Issues = "https://github.com/egehanyorulmaz/structured-llm/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/structured_llm"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

